feat: atualização das programações

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
         <div id="fh5co-main-content">
             <div class="fh5co-post">
-                <div class="fh5co-entry padding">
+                <!-- <div class="fh5co-entry padding">
                     <img src="assets/images/project-1.jpg" alt="Reuniao Vida e Ministerio" />
                     <div>
                         <span class="fh5co-post-date">Ano de 2025</span>
@@ -75,9 +75,9 @@
                             Semana e Discursos Públicos
                         </p>
                     </div>
-                </div>
+                </div> -->
 
-                <div class="fh5co-entry padding">
+                <!-- <div class="fh5co-entry padding">
                     <img src="assets/images/project-2.jpg" alt="Atividades Mecânicas" />
                     <div>
                         <span class="fh5co-post-date">Ano de 2025</span>
@@ -86,7 +86,7 @@
                         </h2>
                         <p>Atividade de Cada Irmão nas Reuniões</p>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="fh5co-entry padding">
                     <img src="assets/images/project-3.jpg" alt="Serviço de Campo" />
@@ -115,12 +115,12 @@
                         </p>
                     </div>
                 </div>
-                <footer>
+                <!-- <footer>
                     <div>
                         &copy; 2024 - Made with love by
                         <a href="https://github.com/byMarinho" target="_blank">@byMarinho</a>
                     </div>
-                </footer>
+                </footer> -->
             </div>
         </div>
     </div>
