--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -95,22 +95,37 @@
 		</div>
 
 		<div id="fh5co-main-content">
-			<!-- <div class="fh5co-post">
+			<div class="fh5co-post">
 				<div class="fh5co-entry padding">
 					<div class="anuncios">
 						<h3><a name="congresso"><strong>Anúncio Sobre a Assembleia de Circuito</strong></a>
 						</h3>
 						<p>Prezados irmãos,</p>
 						<p style="padding-left: 40px;">Temos o prazer de informá-los que a nossa próxima Assembleia de
-							Circuito
-							com o Representante de Betel será...
-							<em>no sábado,</em><strong> 08 de março de 2025.</strong>
+							Circuito com o Representante de Betel será...
+							<em>no sábado,</em><strong> 04 de outubro de 2025.</strong>
 						</p>
 						<p>Local: Salão de Assembleias das Testemunhas de Jeová em Camaçari - <strong>Auditório
 								A</strong></p>
 					</div>
 				</div>
-			</div> -->
+			</div>
+
+			<div class="fh5co-post">
+				<div class="fh5co-entry padding">
+					<div class="anuncios">
+						<h3><a name="congresso"><strong>Anúncio Sobre a Assembleia de Circuito</strong></a>
+						</h3>
+						<p>Prezados irmãos,</p>
+						<p style="padding-left: 40px;">Temos o prazer de informá-los que a nossa próxima Assembleia de
+							Circuito com o Superintendente de Circuitp será...
+							<em>no domingo,</em><strong> 25 de janeiro de 2026.</strong>
+						</p>
+						<p>Local: Salão de Assembleias das Testemunhas de Jeová em Camaçari - <strong>Auditório
+								A</strong></p>
+					</div>
+				</div>
+			</div>
 
 			<!-- <div class="fh5co-post">
 				<div class="fh5co-entry padding">
@@ -129,7 +144,7 @@
 				</div>
 			</div> -->
 
-			<!-- <div class="fh5co-post">
+			<div class="fh5co-post">
 				<div class="fh5co-entry padding">
 					<div class="anuncios">
 						<h3><a name="visita"><strong>Anúncio Sobre a Visita do Superintendente de Circuito</strong></a>
@@ -137,12 +152,12 @@
 						<p>Prezados irmãos,</p>
 						<p style="padding-left: 40px;">Temos o prazer de informá-los sobre a próxima visita do
 							Superintendente de Circuito.
-							<em>Data da visita:</em><strong> 18 - 23 de Março de 2025.</strong>
+							<em>Data da visita:</em><strong> 21 - 26 de Outubro de 2025.</strong>
 						</p>
-						<p>Casal Substituto - <strong>Edson e Manu</strong></p>
+						<p><strong>Márcio e Thamara</strong></p>
 					</div>
 				</div>
-			</div> -->
+			</div>
 
 			<div class="fh5co-post">
 				<div class="fh5co-entry padding">
@@ -164,12 +179,14 @@
 			<div class="fh5co-post">
 				<div class="fh5co-entry padding">
 					<div class="anuncios">
-						<h3><a name="reuniao_especial"><strong>Anúncio Sobre Congresso 2025</strong></a>
+						<h3><a name="reuniao_especial"><strong>Anúncio Sobre Congresso 2026</strong></a>
 						</h3>
 						<p>Prezados irmãos,</p>
-						<p style="padding-left: 40px;">Temos o prazer de informá-los que o Congresso de 2025 será
+						<p style="padding-left: 40px;">Temos o prazer de informá-los que o Congresso de 2026, com o tema
+							<strong>Felicidade Eterna</strong> será
 							<em>no final de semana de</em>
-							<strong> 13 - 15 de Junho de 2025.</strong>
+							<strong> 31 de Julho - 02 de Agosto de 2026</strong> no Salão de Assembleias das Testemunhas
+							de Jeová em Camaçari - <strong>Auditório B</strong>.
 						</p>
 					</div>
 				</div>
