--- a/pages/servicos.html
+++ b/pages/servicos.html
@@ -237,36 +237,36 @@
                     </h2>
 
                     <h4 style="text-align: center; color: black">
-                        <strong>De 05/05 até 11/05</strong>
+                        <strong>De 08/09 até 14/09</strong>
                     </h4>
                     <div>
-                        <img src="../assets/images/data/carrinho1.png" alt="Semana 1 do Mês Atual" width="100%"
+                        <img src="../assets/images/data/carrinho1.jpeg" alt="Semana 1 do Mês Atual" width="100%"
                             height="100%" />
                     </div>
 
                     <h4 style="text-align: center; color: black">
-                        <strong>De 12/05 até 18/05</strong>
+                        <strong>De 15/09 até 21/09</strong>
                     </h4>
                     <div>
-                        <img src="../assets/images/data/carrinho2.png" alt="Semana 2 do Mês Atual" width="100%"
+                        <img src="../assets/images/data/carrinho2.jpeg" alt="Semana 2 do Mês Atual" width="100%"
                             height="100%" />
                     </div>
 
                     <h4 style="text-align: center; color: black">
-                        <strong>De 19/05 até 25/05</strong>
+                        <strong>De 22/09 até 28/09</strong>
                     </h4>
                     <div>
-                        <img src="../assets/images/data/carrinho3.png" alt="Semana 3 do Mês Atual" width="100%"
+                        <img src="../assets/images/data/carrinho3.jpeg" alt="Semana 3 do Mês Atual" width="100%"
                             height="100%" />
                     </div>
 
-                    <h4 style="text-align: center; color: black">
+                    <!-- <h4 style="text-align: center; color: black">
                         <strong>De 26/05 até 01/06</strong>
                     </h4>
                     <div>
                         <img src="../assets/images/data/carrinho4.png" alt="Semana 4 do Mês Atual" width="100%"
                             height="100%" />
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
