--- a/pages/vida_ministerio.html
+++ b/pages/vida_ministerio.html
@@ -104,7 +104,7 @@
         <div id="fh5co-main-content">
             <div class="fh5co-post">
 
-                <div class="fh5co-entry padding">
+                <!-- <div class="fh5co-entry padding">
                     <h1 style="text-align: center; color: black">
                         <strong>Programação Mês de Maio de 2025</strong>
                     </h1>
@@ -128,7 +128,7 @@
                         <img src="../assets/images/data/vm_29-05-2025.jpeg"
                             alt="Reunião Vida e Ministério 29 de Maio de 2025" width="100%" height="100%" />
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
 
